--- a/paper/additional.bib
+++ b/paper/additional.bib
@@ -20,5 +20,27 @@
 	title = {Designing Organizations for Productive Bursts},
 	journal = {under review},
 	year = {2014}
-}		
+}
+
+@article{kane2011,
+	author = {Kane, G. C.}, 
+	year = {2011},
+	title =  {A multimethod study of information quality in wiki collaboration},
+	journal = {ACM Trans. Manag. Inform. Syst.},
+	volume = {2, 1, Article 4},
+	pages = {16 pages},
+	DOI = {10.1145/1929916.1929920 http://doi.acm.org/10.1145/1929916.1929920}
+}
+
+@inproceedings{keegan2012,
+  title={Do Editors or Articles Drive Collaboration? Multilevel
+Statistical Network Analysis of Wikipedia Coauthorship},
+  author={Brian Keegan, Darren Gergle, Noshir Contractor},
+  booktitle={CSCW’12,},
+  year={2012},
+  organization={ACM},
+  location={Seattle, Washington, USA}
+}
+
+
 	
