--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -25,7 +25,14 @@ Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to i
 
 This category is at the chaotic end of the Wikipedia spectrum. On the other hand, there are more prime examples of organized activity. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at the latest snapshot exhibits $\beta = 0$. In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is very positively proportional to the number of editors touching the article \ref{fig:influence_artilces}. This is no coincidence, we chose this category, because it has a reputation for being very organized. Military History is a "WikiProject" with a hierarchy of coordinators, an IRC channel, and a mailing list. As a result of the coordination there is less edit-warring and more focused attention in the category. Each visit to the page by good editors has a definite, productive task at hand. This can also be seen by the $\beta \leq 0$ editor influence \ref{fig:influence_editors}, that super-users are linearly or super-linearly rewarded in rank for their contributions. It requires a frictionless, collaborative environment where the more you edit, the more and more experienced you become. It's also worth noting that \ref{keegan2012}, found that "coordination demands influence the tendency of editors with similar levels of experience to work together". In our scenario that would mean that the coordination present attracts super-users to work in the productive environment. The category Military History is empirically a standout case of collaboration, and shows in its calibrated $\beta$ measurements. 
 
-Overall, it is amazing that so little input information, a binary matrix $M_{ea}$ with only information on	 whether an editor has modified a given article, is sufficient to achieve a high level of fidelity with the empirical data. It suggests some kind of parsimonious, {\it less is more} mechanism, which has direct implications on the overall cost of evaluating contributions in the complex entanglement of contributions. Namely, the use of the bi-partite network random walker model requires only simple and straightforward data mining, compared with, for instance, a model that would primarily rely on the type of words written by editors.
+Why is the measure beta relevant in the socio-technico world?
+
+From a Wikipedia perspective this collaborativeness measure could be operationalized to aid the problem of finding and retaining new users. New users have historically been driven away because of harsh first encounters with un-collaborative editors. Imagine a program that would suggest to new editors the less antagonistic parts of Wikipedia in which to start editing. In fact placement suggestion programs already exist, such as "Suggestbot" \ref{https://en.wikipedia.org/wiki/User:Suggestbot} that are used to try and find next articles of interest for an already-active editor. This suggester would be similar except that it targets friendly Wikipedia categories, and requires no user history. A solution would be to create an feed of the most collaborative categories that a new user could browse through when considering making their first edit. This is a reverse approach form current on-boarding practices, where an interest topic is first chosen and then an edit is made in basically a random-chosen environment. We propose to select the environment first.
+
+Beyond the Wikipedia, corporate private wikis could also use this measurement to classify their employee's behavior. From a business perspective this algorithm could be run over the entire wiki to produce collaborative results. It could show you how collaborative part, or all of your company wiki is. That statistic could be used to show the health of the wiki's collaboration. It could even be used as a proxy metric for how collaboratively the company is working, and how much the best quality-making users are the most active.
+
+
+Overall, it is also practical to run this algorithm on Wiki, because it requires only the binary matrix $M_{ea}$ and simple counting on histories and articles that are already kept in a wiki. It suggests some kind of parsimonious, {\it less is more} mechanism, which has direct implications on the overall cost of evaluating contributions in the complex entanglement of contributions. Namely, the use of the bi-partite network random walker model requires only simple and straightforward data mining, compared with, for instance, a model that would primarily rely on the type of words written by editors.
 
 %$\mathbf{M}$ : most basic measure of collaboration, which represents the bi-partite network contributions to articles by editors: Here, we consider the simplest information available on collaboration: has an editor modified an article at any point in time or not ?
 
