--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -1,5 +1,5 @@
 \section{Related Work}
-To the best of our knowledge, our paper is the first attempt to quantify the value of collective contribution environments from the collaboration structure alone. Our model of {bi-partite random walkers} follows in the lineage of bi-partite networks -- networks with two node types -- in the global economy of countries competing for exporting products \cite{hidalgo2007,hidalgo2009}. The proposed recursive {\it method of reflections} helps understand the competitive advantage (i.e. {\it fitness}) of countries from the types of products they sell, and moreover, whether other countries export similar  (i.e. {\it ubiquitous}) products. The key insight is that most competitive countries are found to not only export non-ubiquitous products, for which they can charge higher price, but also ubiquitous ones. The model of reflections has been improved and complemented in more recent work, mainly to improve its robustness \cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al. \cite{caldarelli2012network} have proposed an alternative method, based on biased stochastic Markov chains, which helps further understand the mutual influence between nodes in bi-partite networks.
+In the collective contribution space, and in Wikipedia in specific, it has been suggest that editor and article quality are reliant on each other \cite{hu07}. This of course would suggest a model of a bi-partite structure -- networks with two node types -- which in Wikipedia related research has also been used to predict editing patterns \cite{yang14}. Our model of {\it bi-partite random walkers} follows in the lineage of the global economy of countries competing for exporting products \cite{hidalgo2007,hidalgo2009}. The proposed recursive {\it method of reflections} helps understand the competitive advantage (i.e. {\it fitness}) of countries from the types of products they sell, and moreover, whether other countries export similar  (i.e. {\it ubiquitous}) products. The key insight is that most competitive countries are found to not only export non-ubiquitous products, for which they can charge higher price, but also ubiquitous ones. The model of reflections has been improved and complemented in more recent work, mainly to improve its robustness \cite{tacchella2012new, cristelli2012competitors, tacchella2013economic, cristelli2013measuring}. Caldarelli et al. \cite{caldarelli2012network} have proposed an alternative method, based on biased stochastic Markov chains, which helps further understand the mutual influence between nodes in bi-partite networks.
 
 Apart from networks of economic competition, collaboration networks have been studied early on in network sciences, in particular for networks of co-authorship in scientific publications \cite{newman2001}, as well as patterns of self-organization in bi-partite networks of actors-movies \cite{ramasco2004self}. Similarly, the analysis of patterns in Wikipedia bi-partite networks confirmed the existence of overlapping cliques of densely connected articles and editors  \cite{jesus2009}. In the same study, clustering of densely connected cliques into larger modules \cite{guimera2007module} showed that editors clustered by interest with higher coordinated efforts in densely populated clusters \cite{jesus2009}.
 
